mobile and desktop eventpage + hamburger location mobile fixed

--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -1,8 +1,33 @@
-.card-image.singleEvent {
-  max-height: 175px;
+.card.eventpage__card {
+  margin: 23px 20%;
+}
+
+.card-image.eventpage__img {
+  max-height: 450px;
   overflow: hidden;
 }
 
-.card-content {
-  font-size: 13px;
+@media screen and (max-width: 1400px){
+  .card.eventpage__card {
+    margin: 23px 15%;
+  }
+
+  .card-image.eventpage__img {
+    max-height: 500px;
+    overflow: hidden;
+  }
+}
+
+@media screen and (max-width: 600px){
+  .card-content {
+    font-size: 13px;
+  }
+
+  .card.eventpage__card {
+    margin: 0px;
+  }
+
+  .card-image.eventpage__img {
+    max-height: 175px;
+  }
 }
